--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,76 @@
 * {
-    font-size: 1.2rem;
-    font-family:'Courier New', Courier, monospace;
-    padding: 0;
-    margin: .2rem
+  font-size: 1.2rem;
+  font-family: "Courier New", Courier, monospace;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #f0f0f0;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 5%;
+  text-align: center;
+  max-width: 800px;
+  margin: auto;
+}
+
+main section {
+    margin-top: 10px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #555;
+}
+  
+  .button i {
+    margin-right: 5px;
+  }
+  
+
+.container {
+  max-width: 800px;
+  margin: 20px auto;
+  background-color: #ffff;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  margin-top: 0;
+  color: #333;
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  font-size: 14px;
+  background-color: #f9f9f9;
+  padding: 10px;
+  border: 1px solid #ddd;
 }
