--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,7 @@ main {
   text-align: center;
   max-width: 800px;
   margin: auto;
+  gap: 20px;
 }
 
 main section {
@@ -49,6 +50,12 @@ main section {
   
   .button i {
     margin-right: 5px;
+  }
+  
+  .logo-icon {
+    width: 90px;
+    height: 90px;
+    fill: #EE322F;
   }
   
 
